--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,6 +37,7 @@ nav {
 nav .links {
   display: inline-block;
   text-align: right;
+  margin-right: 2rem;
 }
 nav a {
   display: inline-block;
@@ -52,4 +53,8 @@ footer p {
   text-align: center;
   color: #bbb;
   margin: 40px auto;
+}
+
+nav .title {
+  margin-left: 2rem;
 }
