--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -6,11 +6,13 @@
 }
 .header h2 {
   font-size: 4em;
+  margin-left: 2rem;
 }
 .header h3 {
   font-size: 3em;
   font-weight: 400;
   margin-bottom: 20px;
+  margin-left: 2rem;
 }
 .btn {
   display: inline-block;
@@ -18,5 +20,9 @@
   padding: 10px 16px;
   border-radius: 10px;
   margin-top: 20px;
+  margin-left: 2rem;
   font-weight: 500;
+}
+p {
+  margin-left: 2rem;
 }
